--- a/blog/static/css/blog.css
+++ b/blog/static/css/blog.css
@@ -1,34 +1,38 @@
 h1 a, h2 a {
-    color: #000099;
+    color: #d9d9d9;
     font-family: 'Coustard';
 }
 
 body {
     padding-left: 15px;
+    background-image: url("https://image.freepik.com/free-photo/wide-black-wooden-background-old-wooden-planks-texture_88281-3902.jpg");
+    background-repeat: no-repeat;
+    background-attachment: fixed;
+    background-size: 100% 100%;
 }
 
-.page-header {
-    background-color: #C25100;
-    margin-top: 0;
-    padding: 20px 20px 20px 40px;
-}
+
 
 .page-header h1, .page-header h1 a, .page-header h1 a:visited, .page-header h1 a:active {
-    color: #ffffff;
-    font-size: 36pt;
+    color: #bfbfbf;
+    font-size: 46pt;
     text-decoration: none;
+    padding-left: 25px
 }
 
 .content {
     margin-left: 40px;
+    color: #bfbfbf;
 }
 
 h1, h2, h3, h4 {
+    color: #bfbfbf;
     font-family: 'Coustard', cursive;
+    font-size: 25pt;
 }
 
 .date {
-    color: #828282;
+    color: #bfbfbf;
 }
 
 .save {
@@ -40,10 +44,10 @@ h1, h2, h3, h4 {
 }
 
 .top-menu, .top-menu:hover, .top-menu:visited {
-    color: #ffffff;
+    color: #bfbfbf;
     float: right;
-    font-size: 26pt;
-    margin-right: 20px;
+    font-size: 36pt;
+    margin-right: 25px;
 }
 
 .post {
@@ -51,5 +55,5 @@ h1, h2, h3, h4 {
 }
 
 .post h2 a, .post h2 a:visited {
-    color: #000000;
+    color: #bfbfbf;
 }
