--- a/blog/templates/blog/base.html
+++ b/blog/templates/blog/base.html
@@ -1,18 +1,27 @@
 {% load static %}
 <html>
     <head>
-        <title>Django Girls blog</title>
+        <style>
+            body  {
+                background-image: url("https://image.freepik.com/free-photo/wide-black-wooden-background-old-wooden-planks-texture_88281-3902.jpg");
+                background-repeat: no-repeat;
+                background-attachment: fixed;
+                background-size: 100% 100%;
+            }
+        </style>
+        <title>Bridgecoursework blog</title>
         <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css">
         <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap-theme.min.css">
         <link href='//fonts.googleapis.com/css?family=Coustard&subset=latin,latin-ext' rel='stylesheet' type='text/css'>
         <link rel="stylesheet" href="{% static 'css/blog.css' %}">
     </head>
     <body>
+
         <div class="page-header">
             {% if user.is_authenticated %}
                 <a href="{% url 'post_new' %}" class="top-menu"><span class="glyphicon glyphicon-plus"></span></a>
             {% endif %}
-            <h1><a href="/">Django Girls Blog</a></h1>
+            <h1><a href="/">Bridgecoursework blog</a></h1>
         </div>
         <div class="content container">
             <div class="row">
