--- a/blog/static/css/blog.css
+++ b/blog/static/css/blog.css
@@ -43,6 +43,10 @@ h1, h2, h3, h4 {
     width: 100%;
 }
 
+.cv-form textarea, .cv-form input {
+    width: 100%;
+}
+
 .top-menu, .top-menu:hover, .top-menu:visited {
     color: #bfbfbf;
     float: right;
@@ -54,6 +58,14 @@ h1, h2, h3, h4 {
     margin-bottom: 70px;
 }
 
+.cv {
+    margin-bottom: 70px;
+}
+
 .post h2 a, .post h2 a:visited {
+    color: #bfbfbf;
+}
+
+.cv h2 a, .cv h2 a:visited {
     color: #bfbfbf;
 }
