--- a/blog/templates/blog/base.html
+++ b/blog/templates/blog/base.html
@@ -20,6 +20,7 @@
         <div class="page-header">
             {% if user.is_authenticated %}
                 <a href="{% url 'post_new' %}" class="top-menu"><span class="glyphicon glyphicon-plus"></span></a>
+                <a href="{% url 'cv_new' %}" class="top-menu"><span class="glyphicon glyphicon-plus"></span></a>
             {% endif %}
             <h1><a href="/">Bridging Coursework Blog</a></h1>
         </div>
